Still configuring Woflram Alpha to work I dumped the old wolfram nodes and instead went right to the source. I am able to make to requests, but I still need to be able to figure out how to convert the image that is given to me into some sort of tangible image that the bot can submit to discord

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bot.js",
   "dependencies": {
     "discord.js": "^11.5.1",
-    "wolfram-alpha": "^0.6.0"
+    "wolfram-alpha-api": "https://products.wolframalpha.com/api/libraries/javascript/wolfram-alpha-api-1.0.0-rc.1.tgz"
   },
   "devDependencies": {},
   "scripts": {
