--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,18 +1,21 @@
-version : 0.2 
-phases: 
-        install:
-                commands:
-                        - echo Install process...
-                        - apt-get install nodejs
-                        - apt-get install npm
-
-                finally:
-                        - echo Finished the install process
-        build:
-                commands:
-                        - Entered the build phase...
-                        - cd math.bot
-                        - npm i
-        post_build:
-                commands:
-                        - npm run watch
+version: 0.2
+phases:
+	install:
+		commands:
+			- echo Install process...
+			- apt-get install nodejs
+			- apt-get install npm
+		finally:
+			- echo Finished the install process
+	build:
+		commands:
+			- Entered the build phase...
+			- cd math.bot
+			- npm i
+			- npm run build
+	post_build:
+		commands:
+			- echo Build completed on `date`
+artifacts:
+	files:
+		- 'build/**/*'
