add runtime version

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,17 +1,16 @@
 version: 0.2
 phases:
     install:
+        runtime-versions:
+            nodejs: 10
         commands:
             - echo Install process...
-            - apt-get install nodejs
-            - apt-get install npm
+            - npm i
         finally:
             - echo Finished the install process
     build:
         commands:
             - Entered the build phase...
-            - cd math.bot
-            - npm i
             - npm run build
     post_build:
         commands:
