--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,9 @@ phases:
             nodejs: 10
         commands:
             - echo Install process...
+            - node --version
+            - npm --version
+            - npm i -g npm
             - npm i
         finally:
             - echo Finished the install process
