--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
 	"private": true,
 	"main": "build/bot.js",
 	"dependencies": {
+		"chalk": "2.4.2",
 		"discord.js": "^11.5.1",
 		"dotenv": "^8.1.0",
-		"global-npm": "0.3.0",
-		"lookenv": "^1.0.1",
-		"wolfram-alpha-api": "file:wolfram-alpha-api-1.0.0-rc.1.tgz",
-		"chalk": "2.4.2",
 		"eslint-plugin-node": "10.0.0",
+		"expression-eval": "^2.0.0",
+		"global-npm": "0.3.0",
 		"gulp": "4.0.2",
 		"gulp-cli": "2.2.0",
 		"gulp-eslint": "6.0.0",
-		"gulp-rimraf": "1.0.0"
+		"gulp-rimraf": "1.0.0",
+		"lookenv": "^1.0.1",
+		"string-calculator": "^1.0.1",
+		"wolfram-alpha-api": "file:wolfram-alpha-api-1.0.0-rc.1.tgz"
 	},
 	"devDependencies": {
 		"husky": "3.0.5",
